# Slack_test_bot

./: .gitignore  README.md  pyproject.toml
src/: main.py  utils.py
